# clawfarmer

./: .gitignore  AGENTS.md  HEARTBEAT.md  INSTALL.md  README.md  SECURITY.md  TOOLS.md
cron/: jobs.template.json
dashboard/: README.md  clawfarmer-dashboard.py  clawfarmer-dashboard.service  clawfarmer-dashboard.sudoers
host/: README.md  clawfarmer-host-tick.py  clawfarmer-ticker-backfill.py
host/systemd/: clawfarmer-host-photo-evening.timer  clawfarmer-host-photo-every-4h.timer  clawfarmer-host-photo-morning.timer  clawfarmer-host-sensors.timer  clawfarmer-host-tick@.service  clawfarmer-openclaw-restart.service  clawfarmer-openclaw-restart.timer
jetson/: README.md  SETUP.md  compare-models.py  pyproject.toml
jetson/clawfarmer_jetson/: __init__.py  analyze.py  capture.py  cli.py
memory/: growth-log.md  sensor-state.json
pi/: README.md  SETUP.md  pyproject.toml
pi/clawfarmer_pi/: __init__.py  actuators.py  cli.py  sensors.py
skills/plant-care/: SKILL.md
skills/plant-monitor/: SKILL.md
